<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="E_Op" Id="{82df33cb-6124-040d-1ef3-9023a4ebf986}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Op :
(
	NONE := 0, // No operation
	PSB, // Pump switchbox
	VSB, // Vent switchbox
	VPS, // Vent pumping station
	POT1, // Transport tube pump down
	VOT1, // Transport tube vent
	SPSB, // Slow Pump Switchbox
	SVSB // Slow Vent switchbox
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>